# langchain-googledrive

./: .gitignore  Makefile  README.md  pyproject.toml  sync.sh
.github/workflows/: _release.yml  langchain_release.yml
.run/: Python tests in ._tests_unit_tests_.run.xml  Python tests in unit_tests.run.xml  pytest in integration_tests.run.xml
docs/: .local_build.sh
docs/api_reference/: conf.py  create_api_rst.py  experimental_api_reference.rst
docs/docs_skeleton/: generate_api_reference_links.py
docs/extras/integrations/document_loaders/: google_drive.ipynb
docs/extras/integrations/retrievers/: google_drive.ipynb
docs/extras/integrations/toolkits/: google_drive.ipynb
docs/extras/integrations/tools/: google_drive.ipynb
docs/integrations/retrievers/: google_drive.ipynb
docs/integrations/toolkits/: google_drive.ipynb
docs/integrations/tools/: google_drive.ipynb
exlangchain/docstore/: google_drive.py
exlangchain/document_loaders/: google_drive.py
exlangchain/retrievers/: __init__.py  google_drive.py
exlangchain/tools/google_drive/: tool.py
exlangchain/utilities/: __init__.py  google_drive.py
langchain_googledrive/document_loaders/: __init__.py  google_drive.py
langchain_googledrive/retrievers/: __init__.py  google_drive.py
langchain_googledrive/tools/: __init__.py
langchain_googledrive/tools/google_drive/: tool.py
langchain_googledrive/utilities/: __init__.py  google_drive.py
tests/integration_tests/document_loaders/: test_google_drive.py
tests/integration_tests/providers/: test_google_drive.py
tests/integration_tests/retrievers/: test_google_drive.py
tests/integration_tests/toolkits/: test_google_drive.py
tests/integration_tests/tools/: test_google_drive.py
tests/unit_tests/callbacks/: fake_callback_handler.py
tests/unit_tests/document_loaders/: test_google_drive.py
tests/unit_tests/llms/: fake_chat_model.py  fake_llm.py
tests/unit_tests/retrievers/: test_google_drive.py
tests/unit_tests/utilities/: test_google_drive.py
tests/unit_tests/utilities/examples/: gdrive_credentials.json  token.json
