[tool.poetry]
name = "langchain-googledrive"
version = "0.0.274"
description = "This is a temporary project while I wait for my langchain [pull-request](https://github.com/hwchase17/langchain/pull/5135) to be validated."
authors = ["Philippe PRADOS"]
license = "MIT License"
readme = "README.md"
repository = "https://www.github.com/pprados/langchain-googledrive"
packages = [{include = "langchain_googledrive"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.0.274"
pydantic= "1.*"
#async-timeout = {version = "^4.0.0", python = "<3.11"}
google-api-python-client ="^2.97"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
playwright = "^1.28.0"
setuptools = "^68.1.2"

[tool.poetry.group.test.dependencies]
# The only dependencies that should be added are
# dependencies used for running tests (e.g., pytest, freezegun, response).
# Any dependencies that do not meet that criteria will be removed.
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
duckdb = "0.8.0"
#duckdb-engine = "^0.7.0"
#duckdb-engine = "0.8.0"
pytest-watcher = "^0.2.6"
freezegun = "^1.2.2"
responses = "^0.22.0"
pytest-asyncio = "^0.20.3"
lark = "^1.1.5"
pandas = "^2.0.0"
pytest-mock  = "^3.10.0"
pytest-socket = "^0.6.0"
#syrupy = "^4.0.2"
unstructured="^0.10.8"
twine="^4.0.0"


#[tool.poetry.group.docs.dependencies]
#autodoc_pydantic = "^1.8.0"
#myst_parser = "^0.18.1"
#nbsphinx = "^0.8.9"
#sphinx = "^4.5.0"
#sphinx-autobuild = "^2021.3.14"
#sphinx_book_theme = "^0.3.3"
#sphinx_rtd_theme = "^1.0.0"
#sphinx-typlog-theme = "^0.8.0"
#sphinx-panels = "^0.6.0"
#toml = "^0.10.2"
#myst-nb = "^0.17.1"
#linkchecker = "^10.2.1"
#sphinx-copybutton = "^0.5.1"
#nbdoc = "^0.0.82"


#[tool.poetry.group.codespell.dependencies]
#codespell = "^2.2.0"


#[tool.codespell]
#skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples'
## Ignore latin etc
#ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
## whats is a typo but used frequently in queries so kept as is
## aapply - async apply
## unsecure - typo but part of API, decided to not bother for now
#ignore-words-list = ''